#IMPLEMENT 'entity'
Implemnted entities